--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
         <!--modal画面の中身-->
-        <div class="modal" style="display: none;">
+        <div class="modal" style="display: none;"></div>
             <div class="modal-content">
                 <div class="modal-text">
                     <div class="modal-title">
@@ -307,39 +307,85 @@
         </div>
             <ul class="shopItemList selection-slider fadeUpTrigger">
                 <li class="shopItem">
-                    <a href="#">
-                        <img class="shopItemImage" src="./assets/images/selection.jpg">
+                        <ul class="selection-item-slider">
+                            <li class="shopItemImage shopItemImage01"></li>
+                            <li class="shopItemImage shopItemImage02"></li>
+                            <li class="shopItemImage shopItemImage03"></li>
+                        </ul>
                         <p class="itemName">メゾン ニャンコ シャツ</p>
                         <p class="yen">¥ 00,000.00</p>
-                    </a>
+                        <ul class="size">
+                            <li>XXS</li>
+                            <li>XS</li>
+                            <li>S</li>
+                            <li>M</li>
+                            <li>L</li>
+                            <li>XL</li>
+                            <li>XXK</li>
+                        </ul>
                 </li>
                 <li class="shopItem">
-                    <a href="#">
-                        <img class="shopItemImage" src="./assets/images/selection.jpg">
+                        <ul class="selection-item-slider">
+                            <li class="shopItemImage shopItemImage01"></li>
+                            <li class="shopItemImage shopItemImage02"></li>
+                            <li class="shopItemImage shopItemImage03"></li>
+                        </ul>
                         <p class="itemName">メゾン ニャンコ ニット</p>
                         <p class="yen">¥ 00,000.00</p>
-                    </a>
+                        <ul class="size">
+                            <li>XXS</li>
+                            <li>XS</li>
+                            <li>S</li>
+                            <li>M</li>
+                            <li>L</li>
+                            <li>XL</li>
+                            <li>XXK</li>
+                        </ul>
                 </li>
                 <li class="shopItem">
-                    <a href="#">
-                        <img class="shopItemImage" src="./assets/images/selection.jpg">
+                        <ul class="selection-item-slider">
+                            <li class="shopItemImage shopItemImage01"></li>
+                            <li class="shopItemImage shopItemImage02"></li>
+                            <li class="shopItemImage shopItemImage03"></li>
+                        </ul>
                         <p class="itemName">メゾン ニャンコ カーディガン</p>
                         <p class="yen">¥ 00,000.00</p>
-                    </a>
+                        <ul class="size">
+                            <li>XXS</li>
+                            <li>XS</li>
+                            <li>S</li>
+                            <li>M</li>
+                            <li>L</li>
+                            <li>XL</li>
+                            <li>XXK</li>
+                        </ul>
                 </li>
                 <li class="shopItem">
-                    <a href="#">
-                        <img class="shopItemImage" src="./assets/images/selection.jpg">
+                        <ul class="selection-item-slider">
+                            <li class="shopItemImage shopItemImage01"></li>
+                            <li class="shopItemImage shopItemImage02"></li>
+                            <li class="shopItemImage shopItemImage03"></li>
+                        </ul>
                         <p class="itemName">メゾン ニャンコ ワンピース</p>
                         <p class="yen">¥ 00,000.00</p>
-                    </a>
+                        <ul class="size">
+                            <li>XXS</li>
+                            <li>XS</li>
+                            <li>S</li>
+                            <li>M</li>
+                            <li>L</li>
+                            <li>XL</li>
+                            <li>XXK</li>
+                        </ul>
                 </li>
                 <li class="shopItem">
-                    <a href="#">
-                        <img class="shopItemImage" src="./assets/images/selection.jpg">
+                        <ul class="selection-item-slider">
+                            <li class="shopItemImage shopItemImage01"></li>
+                            <li class="shopItemImage shopItemImage02"></li>
+                            <li class="shopItemImage shopItemImage03"></li>
+                        </ul>
                         <p class="itemName">メゾン ニャンコ スカート</p>
                         <p class="yen">¥ 00,000.00</p>
-                    </a>
                 </li>
             </ul>
     </section>
